Fix spacing in hamburger styles
Adjusted spacing in hamburger menu styles.

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
 
 .hamburger {
     display: none;
-    flex-direction:column;
+    flex-direction: column;
     cursor: pointer;
 }
 .hamburger i{
@@ -92,7 +92,7 @@ color:#333;
     width: 30px;
     height: 5px;
     background: #333;
-    margin: 3px 0;
+    margin: 5px 0;
     transition: 0.3s;
 }
 
